feat: 预备知识-数据预处理

--- a/d2l/02prerequisites/index.ipynb
+++ b/d2l/02prerequisites/index.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "[数据操作](02-01.data_manipulation.ipynb)\n",
+    "\n",
+    "[数据预处理](02-02.data_preprocessing.ipynb)\n",
     "\n"
    ]
   },
