feat: 预备知识-线性代数

--- a/d2l/02prerequisites/index.ipynb
+++ b/d2l/02prerequisites/index.ipynb
@@ -8,6 +8,8 @@
     "[数据操作](02-01.data_manipulation.ipynb)\n",
     "\n",
     "[数据预处理](02-02.data_preprocessing.ipynb)\n",
+    "\n",
+    "[线性代数](02-03.linear_algebra.ipynb)\n",
     "\n"
    ]
   },
