feat: 预备知识-自动微分

--- a/d2l/02prerequisites/index.ipynb
+++ b/d2l/02prerequisites/index.ipynb
@@ -12,6 +12,8 @@
     "[线性代数](02-03.linear_algebra.ipynb)\n",
     "\n",
     "[微积分](02-04.calculus.ipynb)\n",
+    "\n",
+    "[自动微分](02-05.autograd.ipynb)\n",
     "\n"
    ]
   },
