feat: 预备知识-概率论

--- a/d2l/02prerequisites/index.ipynb
+++ b/d2l/02prerequisites/index.ipynb
@@ -14,6 +14,8 @@
     "[微积分](02-04.calculus.ipynb)\n",
     "\n",
     "[自动微分](02-05.autograd.ipynb)\n",
+    "\n",
+    "[概率](02-06.probability.ipynb)\n",
     "\n"
    ]
   },
