feat: 线性神经网络-线性回归

--- a/d2l/03linear_networks/index.ipynb
+++ b/d2l/03linear_networks/index.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc04ede4-1cfd-4ca3-9226-93c58260bbf7",
+   "id": "e768c91a-75cf-42ea-aeed-d849ffe77014",
    "metadata": {},
    "source": [
-    "[预备知识](02prerequisites/index.ipynb)\n",
+    "[线性回归](03-01.linear_regression.ipynb)\n",
     "\n",
-    "[线性神经网络](03linear_networks/index.ipynb)\n",
     "\n",
     "\n"
    ]
@@ -15,7 +14,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4c3b4c-c60b-487b-bcb1-cbc0ec7faa7b",
+   "id": "0685447a-ac3a-4fd6-b7b8-1b91ce6960ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0500f3-bde4-466b-889b-24c1a3c1422e",
    "metadata": {},
    "outputs": [],
    "source": []
