feat: 线性神经网络-从零实现线性回归

--- a/d2l/03linear_networks/index.ipynb
+++ b/d2l/03linear_networks/index.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "[线性回归](03-01.linear_regression.ipynb)\n",
     "\n",
+    "[从零开始实现线性回归](03-02.linear_regression_scratch.ipynb)\n",
     "\n",
     "\n"
    ]
