--- a/d2l/03linear_networks/03-01.linear_regression.ipynb
+++ b/d2l/03linear_networks/03-01.linear_regression.ipynb
@@ -2200,7 +2200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2l",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
